# plab_toprate_backend

./: .gitignore  Dockerfile  Makefile  docker-compose-dev.yml  docker-compose-local.yml  pyproject.toml  run_containers.sh
app/: main.py
app/api/: routes.py
app/api/dependencies/: site_parser.py
app/api/endpoints/: system.py  topics.py
app/core/: config.py  events.py  logging.py
app/schemas/: topics.py
app/services/: redis.py  site_parser.py
src/: main.py
src/api/: routes.py
src/api/endpoints/: system.py
src/core/: config.py  errors.py
tests/: conftest.py
tests/api/: test_system.py
